styling-fix spacing

--- a/src/app/scorer-view/batter-panel/batter-panel.component.scss
+++ b/src/app/scorer-view/batter-panel/batter-panel.component.scss
@@ -18,5 +18,5 @@ table {
 }
 
 mat-card {
-  height: 30vh;
+  height: 40vh;
 }
