--- a/src/app/scorer-view/bowler-panel/bowler-panel.component.scss
+++ b/src/app/scorer-view/bowler-panel/bowler-panel.component.scss
@@ -16,5 +16,13 @@ table {
   padding: 10px;
 }
 mat-card {
-  height: 30vh;
+  height: 40vh;
+}
+
+.btm-container {
+  padding-top: 10px;
+}
+
+mat-form-field {
+  padding-top: 10px;
 }
