--- a/src/app/scorer-view/match-summary/match-summary.component.scss
+++ b/src/app/scorer-view/match-summary/match-summary.component.scss
@@ -27,5 +27,10 @@ mat-form-field {
 }
 
 mat-card {
-  height: 30vh;
+  height: 40vh;
+}
+
+.batting-team-title {
+  color: black;
+  padding-top: 10px;
 }
